--- a/styling.css
+++ b/styling.css
@@ -143,3 +143,19 @@ input[name="pytanie"], input[name="note"] {
     width: 90%;
     max-width: 500px;
 }
+footer{
+    text-align: center;
+}
+a[class='odsylacz']{
+    background-color: #b5835a; 
+    color: #ffffff;
+    border-radius: 20px;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    margin-top: 15px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    text-decoration: none;
+    font-family: 'Courier New', Courier, monospace;
+}
