--- a/logowanie.css
+++ b/logowanie.css
@@ -1,44 +1,70 @@
-.okienko{
-    font-family: 'Courier New', Courier, monospace;
-    
-    margin-top: 15%;
-    margin-bottom: 15%;
-    margin-left: 40%;
-    margin-right: 40%;
-    border-style: solid;
-    border-width: 1px;
-    border-color: grey;
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+}
+
+.okienko {
+    margin: 5% auto;
+    border: 1px solid grey;
     text-align: center;
-    height: 400px;
+    height: 550px;
     width: 500px;
-    border-radius:10px;
-    
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
 }
-img{
-    position:absolute;
+
+img {
+    position: absolute;
 }
-.baner{
+
+.baner {
     height: 100px;
-    background-color: burlywood;
-    border-radius:10px;
+    background-color: #444;
+    border-radius: 10px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    font-weight: bold;
 }
-button{
-    background-color: burlywood;
-    border-radius:20px;
-    border-width: 0px;
-    width: 100px;
 
-}
-input[type=submit]{
-    background-color: burlywood;
-    border-radius:20px;
-    border-width: 0px;
+button,
+input[type=submit] {
+    background-color: #444;
+    color: white;
+    border-radius: 20px;
+    border: none;
+    padding: 10px;
     width: 100px;
+    cursor: pointer;
+    transition: background-color 0.3s;
     margin-top: 10px;
-
-
 }
-a{
-    color:blue;
+
+button:hover,
+input[type=submit]:hover {
+    background-color: #555;
+}
+
+input[name="pytanie"] {
+    width: 350px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+a {
+    color: blue;
     text-decoration: underline;
+    transition: color 0.3s;
+}
+
+a:hover {
+    color: darkblue;
 }
